crates/swc_ecma_parser/tests/test262-error-references/fail/13ce2dd24993176a.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/13ce2dd24993176a.js:1:9
  |
1 | for(let [a, a];;);
  |         ^^^^^^

